Upgrade/elasticsearch 9 (#50)
* Upgrade ElasticSearch , Spring Boot and to Java 17

* es to 9.0.4